# kvdbd

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  build.rs  example-cfg-kvapp.json  example-cfg-kvdb.json  example-cfg-kvdbd.json
doc/: api.md  config.md  notes.md
kvdb-lib/: Cargo.toml
kvdb-lib/src/: client.rs  codec.rs  lib.rs
kvdb-lib/src/db/: mod.rs
kvdb-lib/src/protos/: pbapi.proto
kvdb-server/: Cargo.toml
kvdb-server/src/: client.rs  kvcli.rs  main.rs  tester.rs
kvdb-server/src/db/: api.rs
kvdb-server/ssl/: cert.conf  csr.conf
kvdb-server/tests/: integration.rs
kvdb-tools/: Cargo.toml
kvdb-tools/src/: kvcli.rs  tester.rs
pkg/docker/: Dockerfile
src/: codec.rs  kvcli.rs  kvdb-pb.rs  main.rs  tester.rs  tests.rs  util.rs
src/db/: api.rs  lmdb.rs  mod.rs  sled.rs
src/protos/: .gitignore  mod.rs  pbapi.proto
ssl/: .gitignore  mkssl.sh
