[package]
name = "kvdbd"
version = "0.3.1"
authors = ["jgarzik"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
actix-rt = "^0.2.2"
actix-web = "^1.0.0"
actix-files = "^0.1.1"
actix-session = "^0.2.0"
futures = "0.1.25"
env_logger = "0.5"
bytes = "0.4"
sled = "^0.28.0"
clap = "^2.33.0"
reqwest = "^0.9.20"
protobuf = "2"

[build-dependencies]
protoc-rust = "2.0"

[[bin]]
name = "kvdbd"
path = "src/main.rs"

[[bin]]
name = "tester"
path = "src/tester.rs"

