[package]
name = "kvdb-lib"
version = "0.9.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "3"
reqwest = "^0.11"
sled = "^0.34"
lmdb = "^0.8"

[dev-dependencies]
tempdir = "^0.3"

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"

