[package]
name = "kvdbd"
version = "0.9.2"
authors = ["jgarzik"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvdb-lib = { path = "../kvdb-lib" }
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
actix-web = { version = "4", features = ["openssl"] }
env_logger = "^0.5"
bytes = "0.4"
clap = "^3.2"
openssl = "^0.10"
protobuf = "3"

