[package]
name = "kvdbd"
version = "0.9.3"
edition = "2021"
authors = ["Jeff Garzik"]
license = "MIT"
description = "API Server for kvdbd protocol"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvdb-lib = { path = "../kvdb-lib" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
actix-web = { version = "4", features = ["openssl"] }
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
bytes = "1.5"
clap = "^3.2"
openssl = "0.10"
protobuf = "3"

