[package]
name = "kvdb-tools"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kvdb-lib = { path = "../kvdb-lib" }
protobuf = "3"
reqwest = "^0.11"
tokio = { version = "1", features = ["full"] }
clap = "^3.2"
env_logger = "^0.5"

[[bin]]
name = "kvcli"
path = "src/kvcli.rs"

[[bin]]
name = "tester"
path = "src/tester.rs"

